--- a/agri.html
+++ b/agri.html
@@ -2,6 +2,7 @@
 <html lang="zxx">
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/bootstrap.min.css">
@@ -27,11 +28,9 @@
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/style.css">
 
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/responsive.css">
-	<title>DeHaat | </title>
-
+	<title>DeHaat | Ads_page</title>
 	<link rel="icon" href="https://www.agrevolution.in/assets/frontend/images/favicon.png" type="image" sizes="16x16">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/bootstrap.css">
      <style>
@@ -56,146 +55,42 @@
 
 
 
-
-<div class="main-banner-area">
-	<div style="position: absolute; top: 3%; left: 7%;">
-		<img src="https://www.agrevolution.in/assets/frontend/images/logo-inner.svg" class="img-fluid">
+<section class="summary-section pb-100">
+	<div class="summary-shape-image">
+		<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/shape.png" alt="image">
 	</div>
-<div class="d-table">
-<div class="d-table-cell">
-<div class="container-fluid">
-<div class="row align-items-center">
-<div class="col-lg-6 col-md-12">
-<div class="main-banner-content">
-<h1>Seeds To Market</h1>
-<p>DeHaat™ is one of the fastest-growing start-ups in the Agri Tech sector and one of the very few companies providing end-to-end solutions and services to the farming community in India. We are building AI-enabled technologies to revolutionize supply chain and production efficiency in the farm sector. Currently, we are operating in - Bihar, UP, Odisha, and WB - with 350,000 farmers in our service network and our goal is to bring our services to 5 million farmers by 2024.</p>
-<div class="banner-btn">
-<a class="optional-btn text-decoration-none" href="https://www.agrevolution.in/">
-Visit Us
-</a>
-</div>
-</div>
-</div>
-<div class="col-lg-6 col-md-12 p-0">
-<div class="banner-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/main-banner.png" alt="image">
-<div class="shape-area">
-<div class="creative-shape">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/shape.png" alt="main-image">
-</div>
-<div class="creative-shape-two">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/shape.png" alt="main-image">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="shape-img1">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/1.png" alt="image">
-</div>
-<!-- <div class="shape-img2">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/2.png" alt="image">
-</div> -->
-<div class="shape-img3">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/3.png" alt="image">
-</div>
-<div class="shape-img4">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/4.png" alt="image">
-</div>
-<div class="shape-img5">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/home-one/5.svg" alt="image">
-</div>
-</div>
-
-
-<section class="about-section ptb-100">
+	<div class="summary-shape-image">
+		<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/shape.png" alt="image">
+	</div>
 <div class="container">
-<div class="about-title-area">
-<div class="row">
-<div class="col-lg-7 col-md-12">
-<div class="about-title">
-<span>KNOW ABOUT US</span>
-<h2>The territory might be safe is vegetable easy to get</h2>
-</div>
-</div>
-<div class="col-lg-5 col-md-12">
-<div class="about-text">
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="row align-items-center">
-<div class="col-lg-6">
-<div class="about-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/about/about-2.jpg" alt="image">
-</div>
-</div>
-<div class="col-lg-6">
-<div class="about-slider owl-carousel owl-theme">
-<div class="about-item">
-<div class="about-slide-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/about/1.png" alt="image">
-</div>
-<div class="about-text">
-<span>Healthy journey</span>
-<h3>100% Clean & fresh agro services with low cost</h3>
-</div>
-</div>
-<div class="about-item">
-<div class="about-slide-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/about/2.png" alt="image">
-</div>
-<div class="about-text">
-<span>Pure agro services</span>
-<h3>Rich in nutrients but no formal or defect</h3>
-</div>
-</div>
-<div class="about-item">
-<div class="about-slide-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/about/3.png" alt="image">
-</div>
-<div class="about-text">
-<span>Healthy journey</span>
-<h3>Clean & fresh agro services with low cost</h3>
-</div>
-</div>
-</div>
-<div class="about-content-area">
-<div class="about-content">
-<h3>Life is not like a species do you believe?</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed dorem ipsum dolor sit amet, consectetur adipiscing.</p>
-</div>
-<ul class="about-list">
-<li>
-<i class="flaticon-check"></i>
-Get Back to Healthy Life
-</li>
-<li>
-<i class="flaticon-check"></i>
-Wake Up Refreshed
-</li>
-<li>
-<i class="flaticon-check"></i>
-Set a Healthier Lifestyle
-</li>
-<li>
-<i class="flaticon-check"></i>
-Boost Energy & Metabolism
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="about-shape-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/about/about-shape.png" alt="image">
+	<div class="row align-items-center">
+
+	<div class="col-lg-6">
+		<div class="logo pb-5 pt-4">
+			<img src="https://www.agrevolution.in/assets/frontend/images/logo-inner.svg">
+		</div>
+		<div class="summary-content">
+		<span>Harvest & Market Access</span>
+		<h2 class="font-weight-bold">Agri Output</h2>
+		<p>Agri Output is cumulative result of nature’s bounty and farmers ingenuity and hard work even so, unfortunately that does not always translate to deserving monetary rewards for the farmer.</p>
+		<p>Variety of “middlemen” and logistical hurdles become serious impediments between Farmers and high-paying Institutional Buyers, resulting in lack of price transparency for farmer, price increase at both ends due to multiple handling, as well as post-harvest losses. In this process farmers do not receive good farm gate prices for their produce.</p>
+		<div class="summary-btn">
+		<a class="optional-btn text-decoration-none" href="https://www.agrevolution.in/">
+		Visit Us
+		</a>
+		</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="summary-image">
+			<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/1.png" alt="image">
+		</div>
+	</div>
+
+	</div>
 </div>
 </section>
-
 
 <div class="video-section">
 <div class="container">
@@ -220,33 +115,100 @@ Boost Energy & Metabolism
 </div>
 </section>
 
-<section class="summary-section pb-100">
-<div class="container">
-<div class="row align-items-center">
-<div class="col-lg-6">
-<div class="summary-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/1.png" alt="image">
-</div>
-</div>
-<div class="col-lg-6">
-<div class="summary-content">
-<span>A SUMMARY</span>
-<h3>A brief what we use how use the impression help you</h3>
-<p>On the first paragraph crucial text will be appeared consectetur adicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-<div class="summary-btn">
-<a class="optional-btn" href="#">
-Cultivation
-<i class="flaticon-plus"></i>
-</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="summary-shape-image">
-<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/shape.png" alt="image">
-</div>
+<section class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="font-weight-bold">Benefits to Output Buyers</h2>
+            <div class="row">
+                <div class="col-md-12 mb-5 mt-3">
+                    <div class="row">
+                                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                            <div class="pr-2 pl-4 pt-4">
+                                <img src="img/supply.png" width="38%">
+                                <p class="font-regular text-black bold capital pt-4" style="font-size: 16px;">Visibility Of Supplies With Assured Quality</p>
+                            </div>
+                        </div>
+                                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                            <div class="pr-2 pl-4 pt-4">
+                                <img src="https://www.agrevolution.in/images/agriOutput/risk.png" width="38%">
+                                <p class="font-regular text-black bold capital pt-4" style="font-size: 16px;">No Operational Burden Of Managing Operations At Village Level</p>
+                            </div>
+                        </div>
+                                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                            <div class="pr-2 pl-4 pt-4">
+                                <img src="https://www.agrevolution.in/images/agriOutput/online-payment.png" width="38%">
+                                <p class="font-regular text-black bold capital pt-4" style="font-size: 16px;">Scope Of Customization In Production</p>
+                            </div>
+                        </div>
+                                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                            <div class="pr-2 pl-4 pt-4">
+                                <img src="https://www.agrevolution.in/images/agriOutput/temperature.png" width="38%">
+                                <p class="font-regular text-black bold capital pt-4" style="font-size: 16px;">Direct Access To Farmers</p>
+                            </div>
+                        </div>
+                                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                            <div class="pr-2 pl-4 pt-4">
+                                <img src="https://www.agrevolution.in/images/agriOutput/sort.png" width="38%">
+                                <p class="font-regular text-black bold capital pt-4" style="font-size: 16px;">Customized Sorting And Grading At Farm Gate</p>
+                            </div>
+                        </div>
+                                                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="container py-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="font-weight-bold">Facilities available</h2>
+            <div class="row pt-4">
+                <div class="col-2 col-2-media py-5 media-relative wow fadeInUp" data-wow-delay="0.1s" style="background-color: #6bb51e;">
+                    <div class="pr-1 pl-2 pt-5 pb-3 media-absolute">
+                        <p class="font-medium text-white bold capital font-16 pt-2" style="letter-spacing: 1.5px;">In house packhouse availability</p>
+                    </div>
+                    <div class="triangle-right"></div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/examination.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Auto Sorting/Grading Systems</p>
+                    </div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/diet.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Fruit And Vegetable Cleaning And Drying Systems</p>
+                    </div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/chamber.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Sulphite Fumigation Treatment Chambers</p>
+                    </div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/chamber.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Banana Ripening Chambers</p>
+                    </div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/cold-room.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Precooling And Cold Chambers</p>
+                    </div>
+                </div>
+                                    <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
+                    <div class="pr-3 pl-4 pt-4">
+                        <img src="https://www.agrevolution.in/images/agriOutput/medal.png" width="40%">
+                        <p class="font-regular text-black bold capital pt-4 font-16">Trained Manpower To Customize Quality And Size Requirement</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <div class="partner-section">
