banana img replace

--- a/agri.html
+++ b/agri.html
@@ -190,7 +190,7 @@
                 </div>
                                     <div class="col-2 border-grey col-2-media py-5 wow fadeInUp">
                     <div class="pr-3 pl-4 pt-4">
-                        <img src="https://www.agrevolution.in/images/agriOutput/chamber.png" width="40%">
+                        <img src="img/banana.png" width="40%">
                         <p class="font-regular text-black bold capital pt-4 font-16">Banana Ripening Chambers</p>
                     </div>
                 </div>
