--- a/index.html
+++ b/index.html
@@ -15,26 +15,16 @@
 
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/magnific-popup.min.css">
 
-	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/owl.carousel.min.css">
-
-	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/imagelightbox.min.css">
-
-	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/nice-select.min.css">
-
-	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/meanmenu.css">
-
-	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/odometer.min.css">
-
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/style.css">
 
 	<link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/responsive.css">
 
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
 	<title>DeHaat | Ads_page</title>
 	<link rel="icon" href="https://www.agrevolution.in/assets/frontend/images/favicon.png" type="image" sizes="16x16">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+	<link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
      <style>
 		  #btn-1{
 			 border: 1px solid #fff;
@@ -47,19 +37,19 @@
 		  @media (min-width: 768px) {
 			  .modal-xl {
 			    width: 100%;
-			   max-width:1000px;
-			  }
+			   max-width:1200px;
 			}
+		  }
 	</style>
 </head>
 <body>
 
-<div class="preloader">
+<!-- <div class="preloader">
 <div class="lds-ripple">
 <div></div>
 <div></div>
 </div>
-</div>
+</div> -->
 
 
 
@@ -153,149 +143,257 @@
 	</div>
 </section>
 
-<!-- seller modal -->
-<div class="modal fade" id="sellerModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body p-0">
-      	<div class="row">
-      		<div class="col-md-12 col-12" style="background-image: linear-gradient(to bottom, rgb(35 35 35 / 25%), rgb(23 22 23 / 25%)), url(https://www.agrevolution.in/images/network/PHOTO-2019-08-18-12-05-08.jpg);background-position: center;background-size: 100%;background-repeat: no-repeat;height: 40vh">
-      		</div>
-      		<div class="col-md-12 col-12" style="background: #eaeaea;height: 40vh;">
-      			<div class="py-5 pl-4">
-      				<h1 class="text-green font-weight-bold">Welcome !! DeHaat Seller</h1>
-      				<h2 class="text-dark font-weight-bold pt-3">Benefits :</h2>
-      				<!-- <ul class="ul pl-3 pr-5">
-						<li>Product is handled properly, maintain the hygiene and quality.</li>
-						<li>Easy & Online Payments.</li>
-						<li>Avoid travelling long distances.</li>
-						<li>Proper market Updates.</li>
-						<li>Competitive Prices.</li>
-					</ul> -->
-					<div class="row">
-						<div class="col-md-4 col-12">
-							<div class="">
-								<div class="row">
-									<div class="col-md-4 col-5">
-										<img src="">
-									</div>
-									<div class="col-md-4 col-5">
-										Product is handled properly, maintain the hygiene and quality.
-									</div>
-								</div>
-						</div>
-						<div class="col-md-4 col-12">
-							<div class="card">
-								Product is handled properly, maintain the hygiene and quality.
-							</div>
-						</div>
-						<div class="col-md-4 col-12">
-							<div class="card">
-								Product is handled properly, maintain the hygiene and quality.
-							</div>
-						</div>
+<!-- footer -->
+<footer  style="overflow: hidden; background-color: rgba(6, 104, 6, 0.938);">
+		<div class="container-fluid pt-5 mt-5 pb-3 mb-3">
+			<div class="row">
+					<div class="col-12 text-center">
+						<h1 class="text-white"> Contact us</h1>
+						<p class="text-white h4 my-2">Get free farming advisory on</p>
+						<a class="text-white text-decoration-none h1 pt-5" href="callto:18001036110">1800 1036 110</a>
+						<p class="text-white my-2" style="font-size: 25px;">For more info e-mail us at <a  class="text-white text-decoration-none" href="mailto:contact@agrevolution.in">contact@agrevolution.in</a></p>
+						<a href="mailto:contact@agrevolution.in" class="btn btn-light text-success mb-5 py-2 px-5" id="btn-1">Mail us</a>
 					</div>
-				</div>
-      			</div>
-      		</div>
-      	</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- buyer modal -->
-<div class="modal fade" id="buyerModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-body p-0">
-      	<div class="row">
-      		<div class="col-md-5 col-12" style="background-image: linear-gradient(to bottom, rgb(35 35 35 / 25%), rgb(23 22 23 / 25%)), url(https://www.agrevolution.in/images/output.jpg);background-position: 78%;background-size: 190%;background-repeat: no-repeat;">
-
-      		</div>
-      		<div class="col-md-7 col-12" style="background: #eaeaea;">
-      			<div class="py-5 pl-4">
-      				<h1 class="text-green font-weight-bold">Welcome !! DeHaat Buyer</h1>
-      				<h2 class="text-dark font-weight-bold pt-3">Benefits :</h2>
-      				<ul class="ul pl-3 pr-5">
-						<li>Best Wholesale Offers</li>
-						<li>Optimum Quality</li>
-						<li>Avoid market hustles & get the best produce</li>
-						<li>Larger commodity basket at a single place</li>
-						<li>Specialized team to handle all the processes</li>
-					</ul>
-      			</div>
-      		</div>
-      	</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-    <!-- footer -->
-    <footer  style="overflow: hidden; background-color: rgba(6, 104, 6, 0.938);">
-		  <div class="container-fluid pt-5 mt-5 pb-3 mb-3">
-			    <div class="row">
-					  <div class="col-12 text-center">
-						    <h1 class="text-white"> Contact us</h1>
-							<p class="text-white h4 my-2">Get free farming advisory on</p>
-                            <a class="text-white text-decoration-none h1 pt-5" href="callto:18001036110">1800 1036 110</a>
-							<p class="text-white my-2" style="font-size: 25px;">For more info e-mail us at <a  class="text-white text-decoration-none" href="mailto:contact@agrevolution.in">contact@agrevolution.in</a></p>
-							<a href="mailto:contact@agrevolution.in" class="btn btn-light text-success mb-5 py-2 px-5" id="btn-1">Mail us</a>
-					  </div>
-				</div>
-		  </div>
-	</footer>
-	<!-- main footer -->
-	<footer class="mt-0 py-3" style="overflow: hidden;">
-	    <div class="container-fluid bg-white">
-			  <div class="row">
-				    <div class="col-lg-9 col-sm-12">
-						  <div class="d-flex flex-row flex-wrap justify-content-center align-items-center offset-lg-4 pt-1">
-							<a href="https://www.facebook.com/DeHaatTM" class="text-dark" ><i class="fab fa-facebook-f mx-4" style="font-size: 25px; " ></i></a>
-							<a href="https://www.instagram.com/dehaat/" class="text-dark"><i class="fab fa-instagram  mx-4" style="font-size: 25px; "  ></i></a>
-							<a href="https://twitter.com/DeHaatTM" class="text-dark"><i class="fab fa-twitter mx-4 "  style="font-size: 25px; " ></i></a>
-							<a href="https://www.youtube.com/channel/UC7KJA9LXAIrszlEAwY7UufA" class="text-dark"><i class="fab fa-youtube  mx-4"  style="font-size: 25px; " ></i></a>
-							<a href="https://www.linkedin.com/company/dehaat/" class="text-dark"><i class="fab fa-linkedin  mx-4" style="font-size: 25px; "  ></i></a>
-						  </div>
-					</div>
-					  <div class="col-lg-3 col-sm-12 text-center">
-						     &copy; 2021 Green Agrevolution pvt ltd.
-					  </div>
-			  </div>
+			</div>
 		</div>
-	</footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://unpkg.com/popper.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+</footer>
+<!-- main footer -->
+<footer class="mt-0 py-3" style="overflow: hidden;">
+	<div class="container-fluid bg-white">
+			<div class="row">
+				<div class="col-lg-9 col-sm-12">
+						<div class="d-flex flex-row flex-wrap justify-content-center align-items-center offset-lg-4 pt-1">
+						<a href="https://www.facebook.com/DeHaatTM" class="text-dark" ><i class="fab fa-facebook-f mx-4" style="font-size: 25px; " ></i></a>
+						<a href="https://www.instagram.com/dehaat/" class="text-dark"><i class="fab fa-instagram  mx-4" style="font-size: 25px; "  ></i></a>
+						<a href="https://twitter.com/DeHaatTM" class="text-dark"><i class="fab fa-twitter mx-4 "  style="font-size: 25px; " ></i></a>
+						<a href="https://www.youtube.com/channel/UC7KJA9LXAIrszlEAwY7UufA" class="text-dark"><i class="fab fa-youtube  mx-4"  style="font-size: 25px; " ></i></a>
+						<a href="https://www.linkedin.com/company/dehaat/" class="text-dark"><i class="fab fa-linkedin  mx-4" style="font-size: 25px; "  ></i></a>
+						</div>
+				</div>
+					<div class="col-lg-3 col-sm-12 text-center">
+							&copy; 2021 Green Agrevolution pvt ltd.
+					</div>
+			</div>
+	</div>
+</footer>
+  
+<!-- seller Modal -->
+<div class="modal fade" id="sellerModal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog modal-xl p-0" role="document">
+	  <div class="modal-content p-0" style="background-image: linear-gradient(to bottom, rgb(80 167 84 / 65%), rgb(68 88 45 / 75%)), url(https://www.agrevolution.in/images/network/PHOTO-2019-08-18-12-05-08.jpg);background-position: center;background-size: 100%;background-repeat: no-repeat;height: 80vh;">
+		<div class="modal-body">
+			<div align="center" style="padding-top: 20vh;">
+				<h1 class="font-weight-bold text-white">Welcome !! DeHaat seller</h1>
+				<h3 class="text-white font-weight-bold pt-3">
+					Serving the nations needs with an year turnover of more than 10k MT. When you choose Dehaat you will have these benefits :
+				</h3>
+			</div>
+		  <div class="seller-wrap-modal-slider" style="padding-top: 16vh;">
+			<div class="seller-modal-class">
+			  	<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/quality.png">
+							<div class="media-body">							  
+							 <p class="pl-2 text-black" style="font-size: 17px; line-height: 1.6;">Product is handled properly, maintain the hygiene and quality</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/online-shopping.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Easy & Online Payments</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/best-price.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Transparent Pricing</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/market.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Proper market Updates</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/price-tags.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Competitive Prices</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	</div>
+</div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.min.js"></script>
+<!-- buyer Modal -->
+<div class="modal fade" id="buyerModal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog modal-xl p-0" role="document">
+	  <div class="modal-content p-0" style="background-image: linear-gradient(to bottom, rgb(80 167 84 / 65%), rgb(68 88 45 / 75%)), url(https://www.agrevolution.in/images/network/PHOTO-2019-08-18-12-05-08.jpg);background-position: center;background-size: 100%;background-repeat: no-repeat;height: 80vh;">
+		<div class="modal-body">
+			<div align="center" style="padding-top: 20vh;">
+				<h1 class="font-weight-bold text-white">Welcome !! DeHaat Buyer</h1>
+				<h3 class="text-white font-weight-bold pt-3">
+					More than 5,00,000 farmers are connected with us. When you choose DeHaat, you choose to these benefits :
+				</h3>
+			</div>
+		  <div class="buyer-wrap-modal-slider" style="padding-top: 16vh;">
+			<div class="buyer-modal-class">
+			  	<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/offer.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Best Wholesale Offers</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/quality.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-3 text-black" style="font-size: 17px; line-height: 1.6;">Optimum Quality</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/avoid-crowds.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-2 text-black" style="font-size: 17px; line-height: 1.6;">Avoid market hustles & get the best produce</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/picnic-basket.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-2 text-black" style="font-size: 17px; line-height: 1.6;">Larger commodity basket at a single place</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+				<div> 
+					<div class="card">
+					  <div class="card-body ">
+						<div class="media">
+							<img class="img-fluid h-25 w-25" src="img/united.png">
+							<div class="media-body">							  
+							 <p class="pl-2 pt-2 text-black" style="font-size: 17px; line-height: 1.6;">Specialized team to handle all the processes</p>
+							</div>
+						  </div>
+					  </div>
+					</div>
+				</div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	</div>
+</div>
 
-<script src="https://templates.envytheme.com/trifles/default/assets/js/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script>
+$(document).ready(function(){
+  $('.seller-modal-class').slick({
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 3000,
+        arrows: false,
+        dots: false,
+        pauseOnHover: false,
+        responsive: [{
+            breakpoint: 768,
+            settings: {
+                slidesToShow: 2
+            }
+        }, {
+            breakpoint: 520,
+            settings: {
+                slidesToShow: 1
+            }
+        }]
+    });
+  $('.buyer-modal-class').slick({
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 3000,
+        arrows: false,
+        dots: false,
+        pauseOnHover: false,
+        responsive: [{
+            breakpoint: 768,
+            settings: {
+                slidesToShow: 2
+            }
+        }, {
+            breakpoint: 520,
+            settings: {
+                slidesToShow: 1
+            }
+        }]
+    });
+});
+$('.modal').on('shown.bs.modal', function (e) {
+  $('.seller-modal-class').slick('setPosition');
+  $('.seller-wrap-modal-slider').addClass('open');
 
-<script src="https://templates.envytheme.com/trifles/default/assets/js/bootstrap.min.js"></script>
+  $('.buyer-modal-class').slick('setPosition');
+  $('.buyer-wrap-modal-slider').addClass('open');
+})
 
-<script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.meanmenu.js"></script>
 
-<script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.appear.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/odometer.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/owl.carousel.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.magnific-popup.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.nice-select.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/imagelightbox.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/jquery.ajaxchimp.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/form-validator.min.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/contact-form-script.js"></script>
-
-<script src="https://templates.envytheme.com/trifles/default/assets/js/main.js"></script>
+</script>
 </body>
 </html>
