--- a/sample.html
+++ b/sample.html
@@ -54,38 +54,43 @@
             <img src="https://www.agrevolution.in/assets/frontend/images/logo-inner.svg">
          </div>
          <div class="summary-content">
-         <p>DeHaat serves 1500+ retailers & businesses in the Input, Output, and Cattle Feed segments offering material inputs, technical advisory, market linkage for farm produce across Bihar, Uttar Pradesh, Odisha, Jharkhand, West Bengal, etc. Join the platform to experience:</p>
-
-         <div class="row">
-            <div class="col-md-6 col-6 pt-2 text-grey" align="center">
-               <img src="img/bill.png" width="45px"><br/>
-               Easy transactions with billing machines
-            </div>
-            <div class="col-md-6 col-6 pt-2 text-grey" align="center">
-               <img src="img/checkout.png" width="45px"><br/>
-               Seamless Online Orders
-            </div>
-            <div class="col-md-6 col-6 pt-2 text-grey" align="center">
-               <img src="img/credit.png" width="45px"><br/>
-               Credit-based Purchases
-            </div>
-            <div class="col-md-6 col-6 pt-2 text-grey" align="center">
-               <img src="img/smartphone.png" width="45px"><br/>
-               Real-time Mobile Updates of Purchases
-            </div>
-            <div class="col-md-12 col-12 text-grey" align="center">
-               <div class="summary-btn">
-                  <a class="optional-btn text-decoration-none" target="_blank" href="https://www.agrevolution.in/business-model">
-                     Visit Us
-                  </a>
+            <p>DeHaat serves 1500+ retailers & businesses in the Input, Output, and Cattle Feed segments offering material inputs, technical advisory, market linkage for farm produce across Bihar, Uttar Pradesh, Odisha, Jharkhand, West Bengal, etc. Join the platform to experience:</p>
+            <div class="row">
+               <div class="col-md-6 col-6 pt-2 text-grey" align="center">
+                  <img src="img/bill.png" width="45px"><br/>
+                  Easy transactions with billing machines
+               </div>
+               <div class="col-md-6 col-6 pt-2 text-grey" align="center">
+                  <img src="img/checkout.png" width="45px"><br/>
+                  Seamless Online Orders
+               </div>
+               <div class="col-md-6 col-6 pt-2 text-grey" align="center">
+                  <img src="img/credit.png" width="45px"><br/>
+                  Credit-based Purchases
+               </div>
+               <div class="col-md-6 col-6 pt-2 text-grey" align="center">
+                  <img src="img/smartphone.png" width="45px"><br/>
+                  Real-time Mobile Updates of Purchases
+               </div>
+               <div class="col-md-12 col-12 text-grey" align="center">
+                  <div class="summary-btn">
+                     <a class="optional-btn text-decoration-none" target="_blank" href="https://www.agrevolution.in/business-model">
+                        Visit Us
+                     </a>
+                  </div>
                </div>
             </div>
-         </div>
-
          </div>
       </div>
 
       <div class="col-lg-6">
+         <div class="logo pt-4 mobile-d-none" align="right">
+            <div class="summary-btn">
+               <a class="optional-btn text-decoration-none" href="callto:18001036110">
+                  Call Us Now
+               </a>
+            </div>
+         </div>
          <div class="summary-image">
             <img src="https://templates.envytheme.com/grino/default/assets/images/featured-img.png" alt="image">
          </div>
