--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zxx">
+<html lang="en">
 <head>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/style.css">
    <link rel="stylesheet" href="https://templates.envytheme.com/trifles/default/assets/css/responsive.css">
    <title>DeHaat | Ads_page</title>
+   <meta property="og:title" content="Home"><meta name="twitter:title" content="Home"><meta property="og:description" content="Please provide your E-mail address to receive updates, or learn more about a product or service."><meta name="twitter:description" content="Please provide your E-mail address to receive updates, or learn more about a product or service."><meta property="og:type" content="website"><meta name="twitter:type" content="website"><meta property="og:image" content="https://mcusercontent.com/b0f50832d15a58ba1f1a13195/images/5eef4233-296e-4d06-8b53-1fafc004d017.png">
    <link rel="icon" href="https://www.agrevolution.in/assets/frontend/images/favicon.png" type="image" sizes="16x16">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -18,23 +19,26 @@
    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
    <script src="js/validation1.js"></script>
    <style>
-        #btn-1{
-          border: 1px solid #fff;
-          font-size: 17px;
-          border-radius: 20px;
-        }
-        .main-banner-area{
-          height: auto !important;
-        }
-        .text-grey{
+      ol, ul {
+         padding-left: 0;
+      }
+      #btn-1{
+         border: 1px solid #fff;
+         font-size: 17px;
+         border-radius: 20px;
+      }
+      .main-banner-area{
+         height: auto !important;
+      }
+      .text-grey{
          color: #7a7e9a;
-        }
-        @media (min-width: 768px) {
-           .modal-xl {
-             width: 100%;
+      }
+      @media (min-width: 768px) {
+         .modal-xl {
+            width: 100%;
             max-width:1200px;
          }
-        }
+      }
    </style>
 </head>
 <body>
