--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
      	ol, ul {
         	padding-left: 0;
       	}
+      	.bg-secondary-blue{
+      		background: #0f2427;
+      	}
      	a{
      		text-decoration: none !important;
      		cursor: pointer !important;
@@ -92,7 +95,6 @@
 <i class="fas fa-chevron-up"></i>
 </div>
 
-
 <section class="bg-green">
 	<div class="container">
 		<div class="row">
@@ -106,9 +108,20 @@
 						When you choose Dehaat, You choose to
       				</div>
       				<div class="text-white pt-4">
-      					a. Middleman free trade.<br/>
-						b. Win post-harvest wars.<br/>
-						c. Serve Nations Quality Food Needs.
+						<div class="row">
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/trade.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Middleman free trade</h6>
+							</div>
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/harvest.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Win post-harvest wars</h6>
+							</div>
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/quality.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Serve Nations Quality Food Needs</h6>
+							</div>
+						</div>
       				</div>
 					<div class="summary-btn">
 						<a class="optional-btn text-decoration-none" data-toggle="modal" data-target="#sellerModal">
@@ -128,9 +141,20 @@
 						When you choose DeHaat, you choose to
       				</div>
       				<div class="text-white pt-4">
-      					a. Help Farmers community<br/>
-						b. Get the best quality produce<br/>
-						c. Boost the rural economy<br/>
+						<div class="row">
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/farmer.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Help Farmers community</h6>
+							</div>
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/quality.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Get the best quality produce</h6>
+							</div>
+							<div class="col-md-3 col-12" align="center">
+								<img src="img/economic.png" width="60%" class="d-block mx-auto">
+								<h6 class="pt-2">Boost the rural economy</h6>
+							</div>
+						</div>
       				</div>
 					<div class="summary-btn">
 						<a class="optional-btn text-decoration-none" data-toggle="modal" data-target="#buyerModal">
@@ -144,6 +168,300 @@
 	</div>
 </section>
 
+<section class="bg-secondary-blue">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-12 py-5">
+				<h2 class="font-weight-bold text-white pt-3 pl-3">Fruits</h2>
+				<h5 class="text-white pl-3">DeHaat Perishable Agriculture Fruit Output Basket :</h5>
+				<div class="fruits mt-5">
+				  	<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/apple.png" class="d-block mx-auto px-4 pt-4">
+								<h6 class="pt-3 text-black font-weight-bold">Apple</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">J & K, HP</h6>
+							<p class="text-white" style="line-height: 1;">red Delicious, Golden, Honey Crisp</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/pineapple.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Pineapple</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">North East, West Bengal</h6>
+							<p class="text-white" style="line-height: 1;">King Qew, Queen</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/pomegranate.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Pomegranate</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Maharastra, Gujrat</h6>
+							<p class="text-white" style="line-height: 1;">Sinduri, Arakta</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/lychee.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Litchi</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Bihar, West Bengal</h6>
+							<p class="text-white" style="line-height: 1;">Shahi, China</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/banana1.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Banana</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Maharastra, Gujrat, UP</h6>
+							<p class="text-white" style="line-height: 1;">Chiniya, Cavendish, Grand Nain</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/orange.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Kinnow</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Punjab</h6>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/strawberry.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Strawberry</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Maharastra</h6>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/mango.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Mango</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB, Bihar</h6>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/grape.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Grapes</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Maharastra</h6>
+							<p class="text-white" style="line-height: 1;">Red, White</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/tomato.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Tomato</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Maharastra, UP</h6>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/nuts.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Fox-Nuts</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">Bihar</h6>
+							<p class="text-white" style="line-height: 1;">Any Size</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-12 py-5">
+				<h2 class="font-weight-bold text-white pt-3 pl-3">Vegetables</h2>
+				<h5 class="text-white pl-3">DeHaat Perishable Agriculture Vegetable Output Basket :</h5>
+				<div class="fruits mt-5">
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/onion.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Onion</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, Bihar, Maharastra</h6>
+							<p class="text-white" style="line-height: 1;">Any Size</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/potato.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Potato</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB</h6>
+							<p class="text-white" style="line-height: 1;">Red, LR, chipsona, White</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/chilli.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Green Chilli</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, Assam</h6>
+							<p class="text-white" style="line-height: 1;">Endu, G4</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/peas.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Green Peas</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP</h6>
+							<p class="text-white" style="line-height: 1;">AP3, PS10</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/bitter.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Pointed Gourd</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB</h6>
+							<p class="text-white" style="line-height: 1;">Desi, Hybrid</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/gourd.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Bitter Gourd</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB</h6>
+							<p class="text-white" style="line-height: 1;">Desi, Hybrid</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/bitter-gourd.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Bottle Gourd</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP</h6>
+							<p class="text-white" style="line-height: 1;">Desi, Hybrid</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/okra.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Okra</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB</h6>
+							<p class="text-white" style="line-height: 1;">Desi, Hybrid</p>
+						</div>
+					</div>
+					<div> 
+						<div class="card">
+						  <div class="" align="center">
+							<div class="">
+								<img src="img/chocolate-sticks.png" class="d-block mx-auto px-4 pt-4" width="50px">
+								<h6 class="pt-3 text-black font-weight-bold">Drumsticks</h6>
+							</div>
+						  </div>
+						</div>
+						<div align="center">
+							<h6 class="text-white pt-2 font-weight-bold">UP, WB</h6>
+							<p class="text-white" style="line-height: 1;">Desi, Hybrid</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <!-- footer -->
 <footer  style="overflow: hidden; background-color: rgba(6, 104, 6, 0.938);">
 		<div class="container-fluid pt-5 mt-5 pb-3 mb-3">
@@ -1209,6 +1527,26 @@ $(document).ready(function(){
             breakpoint: 520,
             settings: {
                 slidesToShow: 1
+            }
+        }]
+    });
+  $('.fruits').slick({
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 3000,
+        arrows: false,
+        dots: true,
+        pauseOnHover: false,
+        responsive: [{
+            breakpoint: 768,
+            settings: {
+                slidesToShow: 2
+            }
+        }, {
+            breakpoint: 520,
+            settings: {
+                slidesToShow: 2
             }
         }]
     });
