farm+ text changed

--- a/farmPlus.html
+++ b/farmPlus.html
@@ -60,11 +60,11 @@
 	<div class="row align-items-center">
 		<div class="col-lg-6">
 			<div class="logo pb-5 pt-4 pl-0">
-				<img src="img/Farm+.png" class="pl-0" width="180px">
+				<img src="img/Farm+.png" class="pl-0" width="220px">
 			</div>
 			<div class="summary-content">
-			<span>Harvest & Market Access</span>
-			<h2 class="font-weight-bold">Farm+ Output</h2>
+			<span>Strengthening Production Efficiency</span>
+			<h2 class="font-weight-bold">DeHaat Farmer Synergy</h2>
 			<p>Farm+ Output is cumulative result of nature’s bounty and farmers ingenuity and hard work even so, unfortunately that does not always translate to deserving monetary rewards for the farmer.</p>
 			<p>Variety of “middlemen” and logistical hurdles become serious impediments between Farmers and high-paying Institutional Buyers, resulting in lack of price transparency for farmer, price increase at both ends due to multiple handling, as well as post-harvest losses. In this process farmers do not receive good farm gate prices for their produce.</p>
 			<div class="summary-btn">
