--- a/webinar.html
+++ b/webinar.html
@@ -16,6 +16,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 	<link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
     <style>
+    	@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap');
+    	html, body{
+    		font-family: 'Hind', sans-serif;
+    	}
     	.bg-success{
     		background-color: #0e8e4b !important;
     	}
@@ -102,7 +106,7 @@
 <!-- content -->
 <div align="center" class="bg-banner">
 	<div style="position: absolute;top: 40%;left: 0;right: 0;">
-		<h1 class="text-white font-weight-bold">उन्नति लीची : आधुनिक खेती के सक्षम तरीके !!</h1>
+		<h1 class="text-white font-weight-bold"><span style="color:#0e8e4b;">उन्नति लीची :</span> आधुनिक खेती के सक्षम तरीके !!</h1>
 	</div>
 </div>
 <!-- schedule -->
@@ -167,7 +171,7 @@
 						<div class="col-md-4 col-12" align="center">
 							<img src="img/speakers/speaker3.png" class="speaker-img">
 							<div class="font-weight-bold text-green pt-2">डॉ शेषधर पांडे</div>
-							<div>भारतीय कृषि अनुसंधान परिषद - एनआरसी (लीची)</div>
+							<div>कार्यवाहक निर्देशक, भारतीय कृषि अनुसंधान परिषद - एनआरसी (लीची)</div>
 						</div>
 						<div class="col-md-4 col-12" align="center">
 							<img src="img/speakers/speaker1.png" class="speaker-img">
@@ -186,7 +190,7 @@
 
 					<ul class="zf-tempHeadBdr">
 						<li class="zf-tempHeadContBdr bg-success" style="text-align: center;">
-							<h2 class="zf-frmTitle pt-2"><em> वेबिनार पंजीकरण फॉर्म</em></h2>
+							<h2 class="zf-frmTitle pt-2">वेबिनार पंजीकरण फॉर्म</h2>
 							<p class="zf-frmDesc">उन्नति लीची - आधुनिक खेती के सक्षम तरीके</p>
 						</li>
 					</ul>
