--- a/farmPlus.html
+++ b/farmPlus.html
@@ -49,38 +49,51 @@
 </head>
 <body>
 
-<section class="summary-section pb-100">
-	<div class="summary-shape-image">
-		<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/shape.png" alt="image">
-	</div>
-	<div class="summary-shape-image">
-		<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/shape.png" alt="image">
-	</div>
-<div class="container">
-	<div class="row align-items-center">
-		<div class="col-lg-6">
-			<div class="logo pb-5 pt-4 pl-0">
-				<img src="img/Farm+.png" class="pl-0" width="220px">
-			</div>
-			<div class="summary-content">
-			<span>Strengthening Production Efficiency</span>
-			<h2 class="font-weight-bold">DeHaat Farmer Synergy</h2>
-			<p>Farm+ Output is cumulative result of nature’s bounty and farmers ingenuity and hard work even so, unfortunately that does not always translate to deserving monetary rewards for the farmer.</p>
-			<p>Variety of “middlemen” and logistical hurdles become serious impediments between Farmers and high-paying Institutional Buyers, resulting in lack of price transparency for farmer, price increase at both ends due to multiple handling, as well as post-harvest losses. In this process farmers do not receive good farm gate prices for their produce.</p>
-			<div class="summary-btn">
-			<a class="optional-btn text-decoration-none" href="https://www.agrevolution.in/">
-			Visit Us
-			</a>
-			</div>
-			</div>
-		</div>
-		<div class="col-lg-6">
-			<div class="summary-image pt-5">
-				<img src="https://templates.envytheme.com/trifles/default/assets/img/summary/1.png" alt="image">
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-12 px-0">
+				<div class="pb-5 pt-4" style="position: absolute;top:0;left:-3.4%;z-index: 9999;">
+					<img src="img/Farm+.png" width="220px">
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
+<section class="sector-section ptb-100">
+	<div class="container-fluid">
+		<div class="row align-items-center">
+			<div class="col-lg-6">
+				<div class="sector-content">
+					<div class="pl-3">
+						<h1 class="font-weight-bold">Strengthening<br>Production Efficiency By Enabling <span class="text-green" style="font-size: 2.5rem;font-weight: bold;"> DeHaati-Farmers'</span><br>Synergy</h1>
+					</div>
+					<div class="summary-btn mt-5 ml-0 pl-0">
+						<a class="optional-btn text-decoration-none" href="https://www.agrevolution.in/">
+						Visit Our Website
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 p-0">
+				<div class="sector-image">
+					<img src="https://templates.envytheme.com/trifles/default/assets/img/sector/sector.png" alt="image">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="cloud-img1">
+	<img src="https://templates.envytheme.com/trifles/default/assets/img/sector/1.png" alt="image">
+	</div>
+	<div class="cloud-img2">
+	<img src="https://templates.envytheme.com/trifles/default/assets/img/sector/2.png" alt="image">
+	</div>
+	<div class="cloud-img3">
+	<img src="https://templates.envytheme.com/trifles/default/assets/img/sector/3.png" alt="image">
+	</div>
+	<div class="sun-image rotateme">
+	<img src="https://templates.envytheme.com/trifles/default/assets/img/sector/sun.png" alt="image">
+	</div>
 </section>
 
 <div class="go-top">
