--- a/webinar.html
+++ b/webinar.html
@@ -106,7 +106,7 @@
 <!-- content -->
 <div align="center" class="bg-banner">
 	<div style="position: absolute;top: 40%;left: 0;right: 0;">
-		<h1 class="text-white font-weight-bold"><span style="color:#0e8e4b;">उन्नति लीची :</span> आधुनिक खेती के सक्षम तरीके !!</h1>
+		<h1 class="text-white font-weight-bold"><span style="color:#0e8e4b;">वेबिनार में शामिल हों<br/>उन्नति लीची :</span> आधुनिक खेती के सक्षम तरीके !!</h1>
 	</div>
 </div>
 <!-- schedule -->
@@ -167,16 +167,19 @@
 							<img src="img/speakers/speaker2.png" class="speaker-img">
 							<div class="font-weight-bold text-green pt-2">डॉ दिनेश चौहान</div>
 							<div>वीपी, न्यू इनिशिएटिव, देहात</div>
+							<div class="font-weight-bold">( संयोजक )</div>
 						</div>
 						<div class="col-md-4 col-12" align="center">
 							<img src="img/speakers/speaker3.png" class="speaker-img">
 							<div class="font-weight-bold text-green pt-2">डॉ शेषधर पांडे</div>
 							<div>कार्यवाहक निर्देशक, भारतीय कृषि अनुसंधान परिषद - एनआरसी (लीची)</div>
+							<div class="font-weight-bold">( स्पीकर )</div>
 						</div>
 						<div class="col-md-4 col-12" align="center">
 							<img src="img/speakers/speaker1.png" class="speaker-img">
 							<div class="font-weight-bold text-green pt-2">डॉ आदित्य पांडा</div>
 							<div>हेड - फ्रूट सर्कुलर इकोनॉमी, कोका कोला </div>
+							<div class="font-weight-bold">( स्पीकर )</div>
 						</div>						
 					</div>
 				</div>
